genom wide ihs and xp-ehh

--- a/ihs_analysis.Rmd
+++ b/ihs_analysis.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "ihs"
 author: "Murray Cadzow"
-date: "13/03/2015"
+date: "18/03/2015"
 output: html_document
 ---
 
@@ -13,7 +13,7 @@ library(rehh)
 library(qqman)
 
 POP=""
-TD=data.frame()
+ihs=data.frame()
 s=data.frame()
 make_graph=function(ihs,s){
   ggplot(data = ihs, aes(x=POSITION, y=iHS), ylim=c(min(ihs$iHS -0.5), max(ihs$iHS + 0.5)))  + geom_point(shape = 16, colour= alpha("black", 1/5)) + facet_wrap(~CHR, scales = "free_x")  + geom_hline(aes(yintercept= q1, colour ="quantile"), data=s,)  + geom_hline(aes(yintercept= q2, colour ="quantile"), data=s)  +geom_hline(aes(yintercept= m, colour="mean"), data=s) + scale_colour_manual("",breaks=c("mean","quantile"),values=c("blue","red")) + scale_x_continuous( xlab("Chromosome Position (Mbp)")) + ylab("iHS") + ggtitle(paste0(POP," iHS by Chromosome")) + theme( plot.background= element_rect(colour="black",fill=NA), legend.position= c(0.75, 0.12)) + theme_bw()
@@ -32,10 +32,11 @@ for( POP in c("AXIOM","OMNI","CEU","CHB","CHS","GBR","YRI")){
     }
   ihs = ihh2ihs(ihh)
   ihs = ihs$res.ihs
+  ihs = ihs[!is.na(ihs$iHS),]
   #print(names(ihs))
   #print(head(ihs))
-  manhattan(x = ihs[!is.na(ihs$iHS),], chr = "CHR", bp = "POSITION", p = "Pvalue")
-  s = ihs %>% group_by(CHROM) %>% summarise(m=mean(iHS), sd(iHS), min(iHS), max(iHS), q1 = quantile(iHS, 0.01), q2 = quantile(iHS, 0.99))
+  manhattan(x = ihs[!is.na(ihs$iHS),], chr = "CHR", bp = "POSITION", p = "Pvalue", main=POP)
+  s = ihs %>% group_by(CHR) %>% summarise(m=mean(iHS), sd(iHS), min(iHS), max(iHS), q1 = quantile(iHS, 0.01), q2 = quantile(iHS, 0.99))
   print(as.data.frame(s))
   #plot(make_graph(TD,s))
   }
