--- a/ihs_analysis.Rmd
+++ b/ihs_analysis.Rmd
@@ -11,19 +11,20 @@ library(ggplot2)
 library(scales)
 library(rehh)
 library(qqman)
-
+library(knitr)
+opts_knit$set(root.dir="/run/user//1001//gvfs/smb-share:server=biocldap,share=scratch/merrimanlab/murray/working_dir/extract/ihh_ihs/")
 POP=""
 ihs=data.frame()
 s=data.frame()
 make_graph=function(ihs,s){
   ggplot(data = ihs, aes(x=POSITION, y=iHS), ylim=c(min(ihs$iHS -0.5), max(ihs$iHS + 0.5)))  + geom_point(shape = 16, colour= alpha("black", 1/5)) + facet_wrap(~CHR, scales = "free_x")  + geom_hline(aes(yintercept= q1, colour ="quantile"), data=s,)  + geom_hline(aes(yintercept= q2, colour ="quantile"), data=s)  +geom_hline(aes(yintercept= m, colour="mean"), data=s) + scale_colour_manual("",breaks=c("mean","quantile"),values=c("blue","red")) + scale_x_continuous( xlab("Chromosome Position (Mbp)")) + ylab("iHS") + ggtitle(paste0(POP," iHS by Chromosome")) + theme( plot.background= element_rect(colour="black",fill=NA), legend.position= c(0.75, 0.12)) + theme_bw()
-}
-setwd("~/MurrayXsan/Bioinformatics/working_dir/extract/ihh_ihs/")
+  }
+#setwd("/run/user//1001/gvfs/smb-share:server=biocldap,share=scratch/merrimanlab/murray/working_dir/extract/ihh_ihs/")
 
 
-for( POP in c("AXIOM","OMNI","CEU","CHB","CHS","GBR","YRI")){
-  print(POP)
-  
+#for( POP in c("AXIOM","OMNI","CEU","CHB","CHS","GBR","YRI")){
+#  print(POP)
+ihs_stats=function(POP){  
   ihh=data.frame()
   for( i in 1:22){
     if(file.exists(file = paste0(POP,"chr",i,".ihh"))){
@@ -40,5 +41,75 @@ for( POP in c("AXIOM","OMNI","CEU","CHB","CHS","GBR","YRI")){
   print(as.data.frame(s))
   #plot(make_graph(TD,s))
   }
-
 ```
+
+
+---
+
+AXIOM
+
+---
+
+```{r axiom, echo=FALSE, cache=TRUE}
+ihs_stats(POP="AXIOM")
+```
+
+---
+
+OMNI
+
+---
+
+```{r omni, echo=FALSE, cache=TRUE}
+ihs_stats(POP="OMNI")
+```
+
+
+---
+
+CEU
+
+---
+
+```{r ceu, echo=FALSE, cache=TRUE}
+ihs_stats(POP="CEU")
+```
+
+---
+
+CHB
+
+---
+
+```{r chb, echo=FALSE, cache=TRUE}
+ihs_stats(POP="CHB")
+```
+
+---
+
+CHS
+
+---
+
+```{r chs, echo=FALSE, cache=TRUE}
+ihs_stats(POP="CHS")
+```
+
+---
+
+GBR
+
+---
+
+```{r gbr, echo=FALSE, cache=TRUE}
+ihs_stats(POP="GBR")
+```
+
+---
+
+YRI
+
+---
+
+```{r yri, echo=FALSE, cache=TRUE}
+ihs_stats(POP="YRI")
